--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <span id="country--cases"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Đang điều trị</h3>
+                <h3>Đang là Zoombie</h3>
                 <span id="country--active"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Khỏi</h3>
+                <h3>Cảm thấy ổn hơn</h3>
                 <span id="country--recovered"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Tử vong</h3>
+                <h3>Tẻo củ lẻo</h3>
                 <span id="country--deaths"></span>
             </div>
         </div>
@@ -44,17 +44,22 @@
                 <span id="theworld--cases"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Đang nhiễm</h3>
+                <h3>Đang là Zoombie</h3>
                 <span id="theworld--active"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Khỏi</h3>
+                <h3>Cảm thấy ổn hơn</h3>
                 <span id="theworld--recovered"></span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Tử vong</h3>
+                <h3>Tẻo củ lẻo</h3>
                 <span id="theworld--deaths"></span>
             </div>
+        </div>
+        <div class="updated row">
+            <span class="col-12 text-center" id="last-updated">
+                Dữ liệu được cập nhật lúc: 
+            </span>
         </div>
     </div>
     <script src="script.js"></script>
