--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="shortcut icon" href="https://ncov.moh.gov.vn/o/corona-theme-guest/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://ncov.moh.gov.vn/o/corona-theme-guest/images/favicon.ico"
+        type="image/x-icon">
 </head>
 
 <body>
     <div class="container mt-5 px-4">
         <div class="country--name row">
-            <h2 class="col-12 text-center">Việt nam</h2>
+            <h2 class="col-12 text-center">Việt Nam</h2>
         </div>
         <div class="country--information row text-center">
             <div class="col-6 col-md-3">
@@ -57,8 +58,9 @@
             </div>
         </div>
         <div class="updated row">
-            <span class="col-12 text-center" id="last-updated">
-                Dữ liệu được cập nhật lúc: 
+            <span class="col-12 text-center" >
+                Dữ liệu được cập nhật lúc:
+                <span id="last-updated"></span>
             </span>
         </div>
     </div>
