smaller update ever

--- a/index.html
+++ b/index.html
@@ -16,25 +16,30 @@
 
 <body>
     <div class="container mt-5 px-4">
+        <div class="introduction row">
+            <h1 class="col-12 text-center">
+                Get all current statistics for all countries
+            </h1>
+        </div>
         <div class="country--name row">
             <h2 class="col-12 text-center" id="country-name">Việt Nam</h2>
         </div>
         <div class="country--information row text-center">
             <div class="col-6 col-md-3">
                 <h3>Số ca nhiễm</h3>
-                <span id="country--cases"></span>
+                <span id="country--cases">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Đang là Zombie</h3>
-                <span id="country--active"></span>
+                <span id="country--active">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Cảm thấy ổn hơn</h3>
-                <span id="country--recovered"></span>
+                <span id="country--recovered">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Tẻo củ lẻo</h3>
-                <span id="country--deaths"></span>
+                <span id="country--deaths">...</span>
             </div>
         </div>
         <div class="other-countries row">
@@ -48,25 +53,25 @@
         <div class="theworld--information row text-center">
             <div class="col-6 col-md-3">
                 <h3>Tổng ca nhiễm</h3>
-                <span id="theworld--cases"></span>
+                <span id="theworld--cases">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Đang là Zombie</h3>
-                <span id="theworld--active"></span>
+                <span id="theworld--active">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Cảm thấy ổn hơn</h3>
-                <span id="theworld--recovered"></span>
+                <span id="theworld--recovered">...</span>
             </div>
             <div class="col-6 col-md-3">
                 <h3>Tẻo củ lẻo</h3>
-                <span id="theworld--deaths"></span>
+                <span id="theworld--deaths">...</span>
             </div>
         </div>
         <div class="updated row">
-            <span class="col-12 text-center" >
+            <span class="col-12 text-center">
                 Dữ liệu được cập nhật lúc:
-                <span id="last-updated"></span>
+                <span id="last-update">...</span>
             </span>
         </div>
     </div>
