--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 Get all current statistics for all countries
             </h1>
         </div>
+        <div class="other-countries row">
+            <a class="col-12 text-center text-md-right" href="datatable.html">View Data-table</a>
+        </div>
         <div class="country--name row">
             <h2 class="col-12 text-center" id="country-name">Việt Nam</h2>
         </div>
@@ -41,11 +44,6 @@
                 <h3>Tẻo củ lẻo</h3>
                 <span id="country--deaths">...</span>
             </div>
-        </div>
-        <div class="other-countries row">
-            <select name="select-country" id="select-country" class="col-6 col-md-4 mx-auto">
-                <option id="default-country">Việt Nam</option>
-            </select>
         </div>
         <div class="theworld row">
             <h2 class="col-12 text-center">Thế giới</h2>
