big update ever

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </h1>
         </div>
         <div class="other-countries row">
-            <a class="col-12 text-center text-md-right" href="datatable.html">View Data-table</a>
+            <a class="col-12 text-center text-md-right" href="datatable.html">Click to view Data-table</a>
         </div>
         <div class="country--name row">
             <h2 class="col-12 text-center" id="country-name">Việt Nam</h2>
