--- a/datatable.html
+++ b/datatable.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="https://ncov.moh.gov.vn/o/corona-theme-guest/images/favicon.ico"
         type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
     <meta name="google-signin-client_id"
         content="780660151655-q8csvsr8mk60igsvl192v9goje74cmgt.apps.googleusercontent.com">
 </head>
@@ -25,13 +24,19 @@
             </div>
         </div>
         <div id="data-table">
-            <div class="thead p-0 m-0 row ">
-                <span class="col-3 p-0 text-left">Name</span>
-                <span class="col-3 p-0 text-center">Cases - cumulative total</span>
-                <span class="col-2 p-0 text-center">Cases - newly reported in last 24 hours</span>
-                <span class="col-2 p-0 text-center">Deaths - cumulative total</span>
-                <span class="col-2 p-0 text-center">Deaths - newly reported in last 24 hours</span>
+            <div class="thead p-0 m-0 row">
+                <span class="col-3 p-0 d-none d-md-block text-left">Name</span>
+                <span class="col-3 p-0 d-none d-md-block text-center">Cases - cumulative total</span>
+                <span class="col-2 p-0 d-none d-md-block text-center">Cases - newly reported in last 24 hours</span>
+                <span class="col-2 p-0 d-none d-md-block text-center">Deaths - cumulative total</span>
+                <span class="col-2 p-0 d-none d-md-block text-center">Deaths - newly reported in last 24 hours</span>
+                <span class="col-3 p-0 d-md-none text-left">Name</span>
+                <span class="col-3 p-0 d-md-none text-center">Cases</span>
+                <span class="col-2 p-0 d-md-none text-center">New cases</span>
+                <span class="col-2 p-0 d-md-none text-center">Deaths</span>
+                <span class="col-2 p-0 d-md-none text-center">New deaths</span>
             </div>
+
             <div class="row p-0 m-0" id="data">
                 <div class="col-12 text-center" id="loading">Loading...</div>
                 <div class="col-12 country"></div>
@@ -44,6 +49,7 @@
     <script src="js/core.js"></script>
     <script src="js/rendering.js"></script>
     <script src="js/datatable.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 </body>
 
 </html>
