--- a/datatable.html
+++ b/datatable.html
@@ -59,6 +59,7 @@
     </div>
     <script src="js/core.js"></script>
     <script src="js/rendering.js"></script>
+    <script src="js/loading.js"></script>
     <script src="js/datatable.js"></script>
     <script src="js/login.js"></script>
     <script src="js/popup.js"></script>
