--- a/index.html
+++ b/index.html
@@ -22,53 +22,54 @@
             </h1>
         </div>
         <div class="other-countries row">
-            <a class="col-12 text-center text-md-right" href="datatable.html">Click to view Data-table</a>
+            <a class="col-12 col-md-6 text-center text-md-left  mb-2" href="provinces.html">Click here for more information about VN</a>
+            <a class="col-12 col-md-6 text-center text-md-right mb-2" href="datatable.html">Click to view Data-table</a>
         </div>
         <div class="country--name row">
-            <h2 class="col-12 text-center" id="country-name">Việt Nam</h2>
+            <h2 class="col-12 text-center" id="country-name">Vietnam</h2>
         </div>
         <div class="country--information row text-center">
             <div class="col-6 col-md-3">
-                <h3>Số ca nhiễm</h3>
+                <h3>Cumulative Cases</h3>
                 <span id="country--cases">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Đang là Zombie</h3>
+                <h3>Active Cases</h3>
                 <span id="country--active">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Cảm thấy ổn hơn</h3>
+                <h3>Recovered</h3>
                 <span id="country--recovered">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Tẻo củ lẻo</h3>
+                <h3>Deaths</h3>
                 <span id="country--deaths">...</span>
             </div>
         </div>
         <div class="theworld row">
-            <h2 class="col-12 text-center">Thế giới</h2>
+            <h2 class="col-12 text-center">Global</h2>
         </div>
         <div class="theworld--information row text-center">
             <div class="col-6 col-md-3">
-                <h3>Tổng ca nhiễm</h3>
+                <h3>Cumulative Cases</h3>
                 <span id="theworld--cases">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Đang là Zombie</h3>
+                <h3>Active Cases</h3>
                 <span id="theworld--active">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Cảm thấy ổn hơn</h3>
+                <h3>Recovered</h3>
                 <span id="theworld--recovered">...</span>
             </div>
             <div class="col-6 col-md-3">
-                <h3>Tẻo củ lẻo</h3>
+                <h3>Deaths</h3>
                 <span id="theworld--deaths">...</span>
             </div>
         </div>
         <div class="updated row">
             <span class="col-12 text-center">
-                Dữ liệu được cập nhật lúc:
+                Data last updated:
                 <span id="last-update">...</span>
             </span>
         </div>
