--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             </h1>
         </div>
         <div class="other-countries row">
-            <a class="col-12 col-md-6 text-center text-md-left  mb-2" href="provinces.html">Click here for more information about VN</a>
+            <a class="col-12 col-md-6 text-center text-md-left  mb-2" href="provinces.html">Click here for more
+                information about VN</a>
             <a class="col-12 col-md-6 text-center text-md-right mb-2" href="datatable.html">Click to view Data-table</a>
         </div>
         <div class="country--name row">
@@ -71,6 +72,14 @@
             <span class="col-12 text-center">
                 Data last updated:
                 <span id="last-update">...</span>
+            </span>
+        </div>
+        <div class="footer row">
+            <span class="col-12 col-md-6 my-1 mt-md-5 text-center text-md-left">
+                Paracel & Spratly Islands belong to Vietnam
+            </span>
+            <span class="col-12 col-md-6 my-1 mt-md-5 text-center text-md-right">
+                Cuong Nguyen belongs to Vietnam
             </span>
         </div>
     </div>
