--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </h1>
         </div>
         <div class="other-countries row">
-            <a class="col-12 col-md-6 text-center text-md-left  mb-2" href="provinces.html">Click here for more
+            <a class="col-12 col-md-6 text-center text-md-left  mb-2" href="detail.html">Click here for more
                 information about VN</a>
             <a class="col-12 col-md-6 text-center text-md-right mb-2" href="datatable.html">Click to view Data-table</a>
         </div>
